--- a/.github/workflows/linting-ci.yaml
+++ b/.github/workflows/linting-ci.yaml
@@ -30,11 +30,10 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
-          cache-dependency-path: "**/requirements*.txt"
-      - run: pip install --upgrade pip
-      - run: pip install -r requirements/requirements-dev.txt
+          cache-dependency-path: "poetry.lock"
+      - run: poetry install --with dev
       - run: ruff .
-      - run: pip install -r requirements/requirements-flake8.txt
+      - run: poetry install --with flake9
       - run: flake8 .
 
   python-typing-lint:
@@ -48,6 +47,6 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
-          cache-dependency-path: "**/requirements*.txt"
-      - run: pip install -r requirements/requirements-dev.txt
+          cache-dependency-path: "poetry.lock"
+      - run: poetry install --with dev
       - run: pyright .
