--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ wind-ai-start = "wind_ai.server:main"
 [tool.poetry.dependencies]
 python = ">=3.11,<4.0"
 hbtools = "^0.0.4"
+python-dotenv = "^1.0.0"
+openai = "^0.27.7"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.0.270"
