--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
     rev: v1.1.300
     hooks:
     - id: pyright
-      additional_dependencies: ["open-ai"]
+      additional_dependencies: ["openai", "python-dotenv", "hbtools"]
 
   - repo: https://github.com/PyCQA/flake8
     rev: 5.0.4
